--- a/pixel/head.html
+++ b/pixel/head.html
@@ -13,25 +13,45 @@
 
   try {
     window.onload = function() {
-      let iframeContainer = document.getElementsByClassName('vtex-iframe-0-x-container--ksi-mision-especial')[0]; 
-      console.log('<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<');
-      let iframe = iframeContainer.getElementsByTagName('iframe')[0]; 
-      console.log(iframe);
-      let iframeContent = iframe.ownerDocument;// getElementById('juego'));
-      console.log(iframe.contentWindow.document);
-      console.log(iframe.ownerDocument);
-      console.log(iframeContent);
-      console.log(iframeContent.getElementsByTagName('body')[0]);
-      console.log('>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>');
-      let canvasContent = iframeContainer.getElementsByTagName('canvas')[0];
-      console.log(canvasContent);
+    let flag = setPlaceholder()
+    if(!flag){
+      return false
     }
-} catch(e){
-    console.log(e);
+  }
+  } catch(e){
+      console.log(e);
+  }
+
+
+
+function setPlaceholder(){
+  try {
+    let cpClassname = document.querySelector('.vtex-store-components-3-x-shippingContainer');  
+    let classnamePlaceholder = cpClassname.querySelector('.vtex-address-form__postalCode');
+    let tagInput = classnamePlaceholder.getElementsByTagName('input');
+
+    if(classnamePlaceholder.getElementsByTagName("input").length > 0){
+      classnamePlaceholder.getElementsByTagName("input")[0].setAttribute('placeholder','Escribe tu C.P.');
+      return true
+    }
+    else{
+      setTimeout(function() {
+        setPlaceholder()
+      }, 1000);
+    }
+  } catch(e){
+    setTimeout(function() {
+        setPlaceholder()
+    }, 1000);
+  }
 }
+
+
+
 </script>
 <style>
   .vtex-iframe-0-x-container--ksi-mision-especial canvas {
     height: 200px;
   }
+
 </style>
