placeholder text - PDP

--- a/pixel/head.html
+++ b/pixel/head.html
@@ -54,4 +54,11 @@ function setPlaceholder(){
     height: 200px;
   }
 
+  .vtex-address-form__postalCode input::placeholder{
+    color: black;
+    font-family: 'robotoRegular';
+    font-weight: 400;
+    font-size: 12px;
+  }
+
 </style>
