--- a/pixel/head.html
+++ b/pixel/head.html
@@ -60,5 +60,10 @@ function setPlaceholder(){
     font-weight: 400;
     font-size: 12px;
   }
+  .review__comment
+  .review__comment--user{
+    font-family: 'Billy'!important;
+    font-size: 20px!important;
+  }
 
 </style>
