[ADD] Responsive iframe template Juegos

--- a/pixel/head.html
+++ b/pixel/head.html
@@ -50,6 +50,13 @@ function setPlaceholder(){
 
 </script>
 <style>
+  @media (max-width:414px) and (orientation: portrait){
+      /*usar el selector que tengan para el iframe*/
+    .vtex-iframe-0-x-container--ksi-mision-especial iframe {
+      height: 500px !important;
+    }
+  }
+
   .vtex-iframe-0-x-container--ksi-mision-especial canvas {
     height: 200px;
   }
